--- a/roles/core/templates/sdcore-5g-slice-values.yaml
+++ b/roles/core/templates/sdcore-5g-slice-values.yaml
@@ -20,6 +20,7 @@ omec-control-plane:
     tags:
       pcf: caveyeunghe/5gc-pcf:1.4.3-dev
       udm: caveyeunghe/5gc-udm:1.4.0
+    #   nrf: omecproject/5gc-nrf:rel-1.4.1
     #  amf: <amf image tag>
     # refer to above Helm Chart to add other NF images
 
@@ -63,7 +64,7 @@ omec-control-plane:
       # Use externalIP if you need to access AMF from remote setup
       # and you don't want setup NodePort Service Type
       ngapp:
-        externalIp: {{ core.amf.ip }}
+        externalIp: {{ ansible_default_ipv4.address }}
         port: 38412
       cfgFiles:
         amfcfg.conf:
@@ -74,12 +75,7 @@ omec-control-plane:
 
     # SMF config override. Refer helm chart values for more options.
     smf:
-      cfgFiles:
-        smfcfg.conf:
-          configuration:
-            # Storing AMF subscribers in the datastore is disabled by default.
-            # Once internal testing is complete we will enable DBStore by default.
-            enableDBStore: false
+      deploy: false
 
     #pcf:
     #  cfgFiles:
@@ -91,7 +87,7 @@ omec-control-plane:
         nrfcfg.conf:
           configuration:
             mongoDBStreamEnable: false    # enable/disable MongoDB stream in NRF.
-            nfProfileExpiryEnable: false  # if enabled, remove NF profile if no keepalive received
+            nfProfileExpiryEnable: true   # if enabled, remove NF profile if no keepalive received
             nfKeepAliveTime: 60           # default timeout for NF profiles
 
 
@@ -247,9 +243,9 @@ omec-sub-provision:
                 mtu: 1460                     # Value is sent to UE when PDU Session Established
                 ue-ip-pool: "172.250.1.0/16"  # IP address pool for subscribers
                 ue-dnn-qos:
-                  dnn-mbr-downlink: 500       # UE level downlink QoS (Maximum bit rate per UE)
-                  dnn-mbr-uplink:   500       # UE level uplink QoS (Maximum bit rate per UE)
-                  bitrate-unit: Mbps          # Unit for above QoS rates
+                  dnn-mbr-downlink: 500 # UE level downlink QoS
+                  dnn-mbr-uplink:    500 # UE level uplink QoS
+                  bitrate-unit: Mbps           # Unit for above QoS rates
                   traffic-class:              # Default bearer QCI/ARP (not used in 5G)
                     name: "platinum"
                     qci: 9
@@ -293,60 +289,4 @@ omec-sub-provision:
 # Override values for omec-user-plane Helm Chart
 # https://gerrit.opencord.org/sdfabric-helm-charts/bess-upf/values.yaml
 omec-user-plane:
-  enable: true
-  nodeSelectors:
-    enabled: true
-  resources:
-    enabled: false
-  images:
-    repository: ""    # defaults to Docker Hub
-    # following two lines pull busybox from Docker Hub instead of Aether Registry
-    tags:
-      tools: omecproject/busybox:stable
-    # uncomment following section to add update bess image tag
-    #tags:
-    #  bess: <bess image tag>
-    #  pfcpiface: <pfcp image tag>
-  config:
-    upf:
-      name: "oaisim"
-      sriov:
-        enabled: false    # SRIOV is disabled by default
-      hugepage:
-        enabled: false    # Should be enabled if DPDK is enabled
-      cniPlugin: macvlan  # Can be any other plugin. Dictates how IP address are assigned
-      ipam: static
-      routes:
-        - to: {{ ansible_default_ipv4.address }}
-          via: 169.254.1.1
-      enb:
-        subnet: {{ ran_subnet }} # Subnet for the gNB network
-      access:
-        iface: {{ core.data_iface }}
-        gateway: 192.168.252.1
-        ip: 192.168.252.3/24
-      core:
-        iface: {{ core.data_iface }}
-        gateway: 192.168.250.1
-        ip: 192.168.250.3/24
-      cfgFiles:
-        upf.jsonc:
-          mode: af_packet                # This mode implies no DPDK
-          hwcksum: true
-          log_level: "trace"
-          measure_upf: true
-          measure_flow: true
-          gtppsc: true                   # Extension header enabled in 5G.
-          cpiface:
-            dnn: "internet"              # Must match Slice dnn
-            hostname: "upf"
-            #http_port: "8080"
-            enable_ue_ip_alloc: false    # If true, UPF allocates address from following pool
-            ue_ip_pool: "172.250.0.0/16" # IP pool used UEs if enable_ue_ip_alloc=true
-          slice_rate_limit_config:       # Slice-level rate limiting (also controlled by ROC)
-            # Uplink
-            n6_bps: 10000000000          # 10Gbps
-            n6_burst_bytes: 12500000     # 10ms * 10Gbps
-            # Downlink
-            n3_bps: 10000000000          # 10Gbps
-            n3_burst_bytes: 12500000     # 10ms * 10Gbps
+  enable: false
